OAK-11328: Remove usage of Guava ImmutableList (test classes)