@@ -30,7 +30,7 @@ import javax.jcr.security.AccessControlPolicyIterator;
 import javax.jcr.security.NamedAccessControlPolicy;
 import javax.jcr.security.Privilege;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
+import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterators;
 import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.JcrConstants;
@@ -73,7 +73,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
     public void before() throws Exception {
         super.before();
 
-        cugAccessControlManager = new CugAccessControlManager(root, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        cugAccessControlManager = new CugAccessControlManager(root, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
     }
 
     private CugPolicy createCug(@NotNull String path) {
@@ -170,7 +170,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         CugPolicy cugPolicy = (CugPolicy) policies[0];
         assertTrue(cugPolicy.getPrincipals().isEmpty());
 
-        cug.setProperty(REP_PRINCIPAL_NAMES, ImmutableList.of("unknownPrincipalName", EveryonePrincipal.NAME), Type.STRINGS);
+        cug.setProperty(REP_PRINCIPAL_NAMES, List.of("unknownPrincipalName", EveryonePrincipal.NAME), Type.STRINGS);
 
         policies = cugAccessControlManager.getPolicies(SUPPORTED_PATH);
         cugPolicy = (CugPolicy) policies[0];
@@ -237,7 +237,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         ConfigurationParameters config = ConfigurationParameters.of(AuthorizationConfiguration.NAME, ConfigurationParameters.of(
                     CugConstants.PARAM_CUG_SUPPORTED_PATHS, SUPPORTED_PATHS,
                     CugConstants.PARAM_CUG_ENABLED, false));
-        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
         AccessControlPolicy[] policies = acMgr.getEffectivePolicies(SUPPORTED_PATH);
         assertEquals(0, policies.length);
 
@@ -253,7 +253,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user only has read-access on /content (no read-ac permission)
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies("/content");
             assertEquals(0, effective.length);
         }
@@ -265,7 +265,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user only has read-access on /content (no read-ac permission)
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
             m.getEffectivePolicies("/content2");
         }
     }
@@ -277,7 +277,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user2 only has read-ac permission on /content but not on /content2
         try (ContentSession cs = createTestSession2()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies("/content/a/b/c");
             // [/content/a, /content/a/b/c]
             assertEquals(2, effective.length);
@@ -323,7 +323,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
 
     @Test
     public void testSetInvalidPolicy() throws Exception {
-        List<AccessControlPolicy> invalidPolicies = ImmutableList.of(
+        List<AccessControlPolicy> invalidPolicies = List.of(
                 new AccessControlPolicy() {},
                 (NamedAccessControlPolicy) () -> "name",
                 InvalidCug.INSTANCE
@@ -453,7 +453,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
 
     @Test
     public void testRemoveInvalidPolicy() throws Exception {
-        List<AccessControlPolicy> invalidPolicies = ImmutableList.of(
+        List<AccessControlPolicy> invalidPolicies = List.of(
                 new AccessControlPolicy() {},
                 (NamedAccessControlPolicy) () -> "name",
                 InvalidCug.INSTANCE
@@ -585,7 +585,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         AccessControlPolicy[] testgroupEffective = cugAccessControlManager.getEffectivePolicies(Set.of(getTestGroupPrincipal()));
         assertEquals(2, testgroupEffective.length);
 
-        assertTrue(Sets.intersection(Set.of(everyoneEffective), Set.of(testgroupEffective)).isEmpty());
+        assertTrue(Sets.intersection(ImmutableSet.copyOf(everyoneEffective), ImmutableSet.copyOf(testgroupEffective)).isEmpty());
     }
 
     @Test
@@ -595,7 +595,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
             CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(),
-                    Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+                    ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies(Set.of(getTestGroupPrincipal(), EveryonePrincipal.getInstance()));
             assertEquals(0, effective.length);
         }
@@ -609,7 +609,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         try (ContentSession cs = createTestSession2()) {
             Root r = cs.getLatestRoot();
             CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(),
-                    Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+                    ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
             AccessControlPolicy[] effective = m.getEffectivePolicies(Set.of(getTestGroupPrincipal(), EveryonePrincipal.getInstance()));
             // [/content/a, /content/a/b/c, /content/aa/bb] but not: /content2
             assertEquals(3, effective.length);
@@ -642,7 +642,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         ConfigurationParameters config = ConfigurationParameters.of(AuthorizationConfiguration.NAME, ConfigurationParameters.of(
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, SUPPORTED_PATHS,
                 CugConstants.PARAM_CUG_ENABLED, false));
-        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
         assertEquals(0, acMgr.getEffectivePolicies(Set.of(getTestGroupPrincipal(), EveryonePrincipal.getInstance())).length);
     }
     
@@ -676,7 +676,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         ConfigurationParameters config = ConfigurationParameters.of(AuthorizationConfiguration.NAME, ConfigurationParameters.of(
                 CugConstants.PARAM_CUG_SUPPORTED_PATHS, SUPPORTED_PATHS,
                 CugConstants.PARAM_CUG_ENABLED, false));
-        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+        CugAccessControlManager acMgr = new CugAccessControlManager(root, NamePathMapper.DEFAULT, CugSecurityProvider.newTestSecurityProvider(config), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
 
         Iterator<AccessControlPolicy> effective = acMgr.getEffectivePolicies(principalSet, "/content/a");
         assertFalse(effective.hasNext());
@@ -729,7 +729,7 @@ public class CugAccessControlManagerTest extends AbstractCugTest {
         // test-user only has read-access on /content (no read-ac permission)
         try (ContentSession cs = createTestSession()) {
             Root r = cs.getLatestRoot();
-            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), Set.of(SUPPORTED_PATHS), getExclude(), getRootProvider());
+            CugAccessControlManager m = new CugAccessControlManager(r, NamePathMapper.DEFAULT, getSecurityProvider(), ImmutableSet.copyOf(SUPPORTED_PATHS), getExclude(), getRootProvider());
             Iterator<AccessControlPolicy> effective = m.getEffectivePolicies(Set.of(getTestGroupPrincipal()), "/content/a");
             assertFalse(effective.hasNext());
         }
