@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.core;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.oak.api.Type;
 import org.apache.jackrabbit.oak.commons.LazyValue;
@@ -30,6 +29,8 @@ import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.apache.jackrabbit.oak.spi.state.NodeStore;
 import org.junit.Before;
 import org.junit.Test;
+
+import java.util.List;
 
 import static org.apache.jackrabbit.oak.core.TestPermissionProvider.NAME_ACCESSIBLE;
 import static org.apache.jackrabbit.oak.core.TestPermissionProvider.NAME_NON_ACCESSIBLE;
@@ -266,7 +267,7 @@ public class SecureNodeBuilderTest {
 
     @Test
     public void testGetPropertiesAfterSet() {
-        secureNodeBuilder.setProperty(PropertyStates.createProperty("another", ImmutableList.of("v", "v2"), Type.STRINGS));
+        secureNodeBuilder.setProperty(PropertyStates.createProperty("another", List.of("v", "v2"), Type.STRINGS));
         assertEquals(2, Iterables.size(secureNodeBuilder.getProperties()));
     }
 
@@ -291,7 +292,7 @@ public class SecureNodeBuilderTest {
 
     @Test
     public void testGetBooleanTypeBooleans() {
-        secureNodeBuilder.setProperty("booleans", ImmutableList.of(true, false), Type.BOOLEANS);
+        secureNodeBuilder.setProperty("booleans", List.of(true, false), Type.BOOLEANS);
         assertFalse(secureNodeBuilder.getBoolean("booleans"));
     }
 
@@ -304,7 +305,7 @@ public class SecureNodeBuilderTest {
 
     @Test
     public void testGetStringTypeStrings() {
-        secureNodeBuilder.setProperty("strings", ImmutableList.of("a", "b"), Type.STRINGS);
+        secureNodeBuilder.setProperty("strings", List.of("a", "b"), Type.STRINGS);
         assertNull(secureNodeBuilder.getString("strings"));
     }
 
@@ -323,7 +324,7 @@ public class SecureNodeBuilderTest {
 
     @Test
     public void testGetNameTypeNames() {
-        secureNodeBuilder.setProperty("names", ImmutableList.of("a", "b"), Type.NAMES);
+        secureNodeBuilder.setProperty("names", List.of("a", "b"), Type.NAMES);
         assertNull(secureNodeBuilder.getName("names"));
     }
 
@@ -342,7 +343,7 @@ public class SecureNodeBuilderTest {
 
     @Test
     public void testGetNamesTypeNames() {
-        Iterable<String> names = ImmutableList.of("a", "b");
+        Iterable<String> names = List.of("a", "b");
         secureNodeBuilder.setProperty("names", names, Type.NAMES);
         assertTrue(Iterables.elementsEqual(names, secureNodeBuilder.getNames("names")));
     }
